SET(CMAKE_VERBOSE_MAKEFILE TRUE) 

ADD_DEFINITIONS(-DQT_THREAD_SUPPORT -D_REENTRANT -DQT_NO_DEBUG -DIQRMODULE)

SET(QT_MT_REQUIRED TRUE)
FIND_PACKAGE(Qt4 REQUIRED)


SET (libSrc 
UDPreceive.cpp
)


INCLUDE_directories(
  ${CMAKE_CURRENT_SOURCE_DIR} 
  /usr/include/iqr
  ${QT_INCLUDE_DIR}
)



ADD_LIBRARY(UDPreceive SHARED ${libSrc})


SET_TARGET_PROPERTIES(UDPreceive PROPERTIES PREFIX "")

INSTALL(TARGETS 
  UDPreceive
  LIBRARY DESTINATION $ENV{HOME}/iqr/lib/Modules
)



